# leetcode-study-partner

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.http.yml  docker-compose.yaml  package-lock.json  package.json
backend/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  entrypoint-http.sh  entrypoint.sh  pyproject.toml  requirements.txt  seed_users.py  sql_app.db  sql_app_db  test.db
backend/certs/: key.pem
backend/data/: cleaned_problems.csv
backend/src/: sql_app.db
backend/src/app/: dependencies.py  main.py
backend/src/app/certs/: cert.pem
backend/src/app/core/: auth.py  config.py  database.py  security.py
backend/src/app/models/: __init__.py  match.py  problem.py  queue.py  review.py  token.py  user.py  user_data.py
backend/src/app/routes/: __init__.py  match.py  match_signaling.py  problem.py  queue.py  review.py  user.py  user_data.py  websocket.py
backend/src/app/schemas/: call.py  match.py  matchmaking.py  problem.py  queue.py  queuemodel.py  review.py  token.py  user.py  user_data.py  user_match_history.py  websocket.py
backend/src/app/scripts/: init_db.py  load_problems.py
backend/src/app/services/: match.py  match_signaling.py  match_signlaing.py  matchmaker.py  matchmaking.py  matchmaking_loop.py  problem.py  review.py  token.py  user.py  user_data.py  webrtc.py
backend/tests/: test_matchmaking.py  test_queue.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
frontend/: .env.production  .gitignore  .old_dockerignore  .prettier.json  Dockerfile  README.md  entrypoint.sh  next.config.ts  package-lock.json  package.json
frontend/features/webrtc/hooks/: scripts.ts  (+4 more)
frontend/public/: manifest.json
frontend/src/: App.css  App.ts  middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Footer.tsx  Logo.tsx  Navbar.tsx  ThemeSwitcherButton.tsx  UserButton.tsx  login-form.tsx  privacy-policy.tsx  signup-form.tsx  terms-and-conditions.tsx  user-button.tsx
frontend/src/hooks/: useDashboardData.ts
frontend/src/lib/: auth.tsx  constants.ts  utils.ts
frontend/src/providers/: session.tsx
(+36 files in other folders)
